--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "type": "tool",
   "url" : "https://github.com/Narazaka/FloorAdjuster.git",
   "vpmDependencies": {
-    "nadena.dev.modular-avatar": ">=1.8.0"
+    "nadena.dev.ndmf": ">=1.2.0 <2.0.0"
   }
 }
