--- a/Editor/FloorAdjuster.Editor.asmdef
+++ b/Editor/FloorAdjuster.Editor.asmdef
@@ -1,8 +1,8 @@
 {
     "name": "FloorAdjuster.Editor",
     "references": [
-        "GUID:62ced99b048af7f4d8dfe4bed8373d76",
-        "GUID:83244d0e5c1cd494b8052dd4f01d7fd5"
+        "nadena.dev.ndmf",
+        "FloorAdjuster"
     ],
     "includePlatforms": [
         "Editor"
