--- a/FloorAdjuster.asmdef
+++ b/FloorAdjuster.asmdef
@@ -1,7 +1,7 @@
 {
     "name": "FloorAdjuster",
     "references": [
-        "GUID:fe747755f7b44e048820525b07f9b956"
+        "nadena.dev.ndmf.runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
