Armatureでない場合に警告＆エラー抑制

--- a/Editor/FloorAdjuster.Editor.asmdef
+++ b/Editor/FloorAdjuster.Editor.asmdef
@@ -2,7 +2,8 @@
     "name": "FloorAdjuster.Editor",
     "references": [
         "nadena.dev.ndmf",
-        "FloorAdjuster"
+        "FloorAdjuster",
+        "VRC.SDKBase"
     ],
     "includePlatforms": [
         "Editor"
