--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "Zlib",
   "type": "tool",
   "url" : "https://github.com/Narazaka/FloorAdjuster.git",
+  "unity": "2019.4",
   "vpmDependencies": {
     "nadena.dev.ndmf": ">=1.1.1 <2.0.0-a"
   }
