--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/Narazaka"
   },
   "license": "Zlib",
+  "changelogUrl": "https://github.com/Narazaka/FloorAdjuster#%E6%9B%B4%E6%96%B0%E5%B1%A5%E6%AD%B4",
   "type": "tool",
   "url" : "https://github.com/Narazaka/FloorAdjuster.git",
   "unity": "2019.4",
